# collapse-bubble

./: .gitignore  CHANGELOG  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
docs/: README.md  collapse_bubble.md  merge_duplicates.md
pipeline/pangenie/: README.md  annotate_graph_id.py  merge_duplicates_pangenie.py
scripts/: annotate_var_id.py  collapse_bubble.py  merge_duplicates.py
tests/: test_annotate_var_id.py  test_collapse_bubble.py  test_merge_duplicates.py
tests/collapse_bubble/input/: disjoint.input.vcf.gz.tbi  test.output.vcf  truvari.collaspe.vcf  truvari.output.vcf
tests/collapse_bubble/truth/: chain.output.mapping.collapse.txt  chain.output.mapping.conflict.txt  disjoint.output.mapping.collapse.txt  disjoint.output.mapping.conflict.txt  disjoint.output.mapping.txt  disjoint.output.vcf.gz.tbi  merge_repeat.output.mapping.collapse.txt  merge_repeat.output.mapping.conflict.txt  no_collapse.output.mapping.collapse.txt  no_collapse.output.mapping.conflict.txt  overlap.output.mapping.collapse.txt
